<resources>
    <string name="app_name">Digital business card</string>
    <string name="my_name_is_manasour_and_this_is_a_test">my name is manasour and this is a test</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="digital_business_card">Digital Business Card</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account_register_here">Do not have an account? Register here.</string>

    <string name="enter_your_password_again">Enter your password Again</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here.</string>
    <string name="this_is_main_screen">This is main Screen.</string>


    <string name="setting">Setting</string>
    <string name="change_language">change language</string>

    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <string name="Support">Support</string>
    <string name="logout">Logout</string>
    <string name="register_your_account">Register Your Account</string>
    <string name="full_name">Full Name</string>
    <string name="description">Description</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_name">your name...</string>
    <string name="describe_yourself">describe yourself...</string>
    <string name="username">Username</string>
    <string name="changing_my_password">changing my password</string>
    <string name="email">Email</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="address">Address</string>
    <string name="your_city">Your city</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">Welcome!</string>
    <string name="you_don_t_have_account">You don\'t have account?</string>
    <string name="Register">Register</string>
    <string name="search_username_here">Search username here...</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="empty">Empty</string>
    <string name="whatsapp_number">Whatsapp Number:</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="you_already_have_an_account">You already have an account?</string>
    <string name="send_request">SEND REQUEST</string>
    <string name="don_t_have_a_card">Don\'t have a card?</string>
    <string name="eng">Eng</string>
    <string name="if_you_face_any_problem_or_would_like_to_inquire_you_can_contact_us_via_e_mail">If you face any problem or would like to inquire, you can contact us via e-mail:</string>
</resources>